buildscript {
    ext {
        // Spring has to stay at 2.x.x for now, as 3.x.x requires Java 17
        springVersion = '2.7.7'
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:$springVersion")
    }
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'maven'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

jar {
    archiveBaseName.set('SpotifyDiscoveryBot')
    archiveVersion.set('1.0')
    archiveFileName = "${archiveBaseName}-${archiveVersion}"
}

springBoot {
    mainClass.set('spotify.SpotifyDiscoveryBot')
}

sourceCompatibility = 1.11

repositories {
    mavenCentral()
    maven {
        url 'https://jitpack.io'
    }
    maven {
        url 'https://mymavenrepo.com/repo/FpgB1Mi6I9ud1Gd3tX0r/'
    }
}

dependencies {
    implementation 'spotify:spotify-dependencies:1.3.1'
    implementation 'se.michaelthelin.spotify:spotify-web-api-java:7.3.0'

    implementation "org.springframework.boot:spring-boot-starter-web:$springVersion"

    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'org.xerial:sqlite-jdbc:3.34.0'

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.4.5'
}
